<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bs_background"
    app:behavior_hideable="false"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/view_background"/>

    <TextView
        android:id="@+id/tvCreateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:fontFamily="@font/third_font"
        android:text="@string/create_note"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:padding="10dp"
        android:background="@drawable/et_background"
        android:inputType="text"
        android:fontFamily="@font/second_font"
        android:hint="@string/note_title" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="name"
        android:padding="10dp"
        android:background="@drawable/et_background"
        android:inputType="text"
        android:fontFamily="@font/second_font"
        android:hint="@string/note_description" />

    <TextView
        android:id="@+id/tvTimeTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:fontFamily="@font/third_font"
        android:text="@string/select_when"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:background="@drawable/et_background"
        android:inputType="text"
        android:fontFamily="@font/second_font"
        android:hint="@string/set_date" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:background="@drawable/et_background"
        android:inputType="text"
        android:fontFamily="@font/second_font"
        android:hint="@string/set_time" />

    <TextView
        android:id="@+id/tvImportance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:fontFamily="@font/third_font"
        android:text="@string/set_importance"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="1"
            android:fontFamily="@font/third_font"
            android:text="@string/quick"
            android:textColorLink="#FF8A65" />

        <RadioButton
            android:id="@+id/rbSecond"
            android:layout_width="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:tag="2"
            android:layout_height="wrap_content"
            android:fontFamily="@font/third_font"
            android:text="@string/middle" />

        <RadioButton
            android:id="@+id/rbThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="3"
            android:fontFamily="@font/third_font"
            android:text="@string/await" />
    </RadioGroup>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnToCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_second_background"
        android:fontFamily="@font/new_font"
        android:text="@string/create_note"
        android:textSize="20sp"
        android:textColor="@color/bisque"/>

</LinearLayout>