<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bisque"
    tools:context=".CitiesFragment">


    <TextView
        android:id="@+id/tvCitiesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/new_font"
        android:text="@string/cities_description"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCountries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/new_font"
        android:text="@string/choose_a_country"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCitiesTitle" />

    <Spinner
        android:id="@+id/spinnerCountries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/spin_countries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCountries" />

    <TextView
        android:id="@+id/tvCities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/new_font"
        android:text="@string/choose_a_city"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCountries" />

    <Spinner
        android:id="@+id/spinnerUK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_margin="8dp"
        android:entries="@array/china_cities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCities" />

    <Spinner
        android:id="@+id/spinnerRU"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="visible"
        android:entries="@array/rus_cities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCities" />

    <Spinner
        android:id="@+id/spinnerBL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_margin="8dp"
        android:entries="@array/bel_cities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCities" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonToShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/show_description"
        android:textSize="20sp"
        android:textColor="@color/bisque"
        android:textStyle="bold"
        android:background="@drawable/btn_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonToShow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRU"
        tools:ignore="MissingConstraints">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>